2015-06-12  Mark Wielaard  <mjw@redhat.com>

	* eblcheckreloctargettype.c (ebl_check_reloc_target_type): Allow
	SHT_INIT_ARRAY, SHT_FINI_ARRAY and SHT_PREINIT_ARRAY.

2015-05-17  Mark Wielaard  <mjw@redhat.com>

	* eblobjnote.c (ebl_object_note): If allocation buf is large, then
	allocate it with malloc.

2015-05-17  Mark Wielaard  <mjw@redhat.com>

	* eblopenbackend.c (MAX_PREFIX_LEN): New define (16).
	(openbackend): Stack allocate symname array using MAX_PREFIX_LEN.

2015-01-27  Mark Wielaard  <mjw@redhat.com>

	* libebl.h: Add comment from README that this is completely
	UNSUPPORTED.

2014-11-22  Mark Wielaard  <mjw@redhat.com>

	* ebl-hooks.h (bss_plt_p): Remove ehdr argument.
	* eblbsspltp.c (ebl_bss_plt_p): Likewise.
	* eblopenbackend.c (default_bss_plt_p): Likewise.
	* libebl.h (ebl_bss_plt_p): Likewise.

2014-11-17  Mark Wielaard  <mjw@redhat.com>

	* ebldebugscnp.c (ebl_debugscn_p): Check name is not NULL.

2014-06-17  Mark Wielaard  <mjw@redhat.com>

	* eblinitreg.c (ebl_func_addr_mask): New function.
	* libebl.h (ebl_func_addr_mask): Define.
	* libeblP.h (struct ebl): Add func_addr_mask.

2014-05-19  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (gen_SOURCES): Add eblcheckreloctargettype.c.
	* eblcheckreloctargettype.c: New file.
	* ebl-hooks.h (check_reloc_target_type): New hook.
	* eblopenbackend.c (default_check_reloc_target_type): New function.
	(fill_defaults): Assign default_check_reloc_target_type to
	check_reloc_target_type.
	* libebl.h (ebl_check_reloc_target_type): New function definition.

2013-12-18  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (gen_SOURCES): Add eblresolvesym.c.
	* ebl-hooks.h (resolve_sym_value): New entry.
	* eblresolvesym.c: New file.
	* libebl.h (ebl_resolve_sym_value): New definition.
	* libeblP.h (fd_addr): New field.
	(fd_data): Likewise.

2013-12-18  Jan Kratochvil  <jan.kratochvil@redhat.com>

	unwinder: s390 and s390x
	* Makefile.am (gen_SOURCES): Add eblnormalizepc.c and eblunwind.c.